src/tests/ci/assignment_5_functions/valid/19_no_guard.c
#include "19_no_guard.h"

int main() {
    int x = triple(4);
    return x;
}
