src/tests/ci/assignment_5_functions/invalid_semantic/08_function_return_type_mismatch.c
int my_func() {
    return 3.14;
}

int main() {
    return my_func();
}